infra/VPC.tf
# Criar VPC
resource "aws_vpc" "terraform_vpc" {
  cidr_block = var.vpc_cidr_block
  tags = {
    Environment = var.tag_environment
    Ambiente    = var.tag_ambiente
    "Name"      = var.vpc_name
  }
}

# Criar Internet Gateway
resource "aws_internet_gateway" "terraform_igw" {
  vpc_id = aws_vpc.terraform_vpc.id
  tags = {
    Environment = var.tag_environment
    Ambiente    = var.tag_ambiente
    Name        = "igw-${var.tag_environment}"
  }
}

# Subnets Públicas
resource "aws_subnet" "public_subnet_1" {
  vpc_id            = aws_vpc.terraform_vpc.id
  cidr_block        = var.public_subnet_cidrs[0]
  availability_zone = var.availability_zones[0]

  map_public_ip_on_launch = true

  tags = {
    Name        = "public-subnet-1-terraform"
    Environment = var.tag_environment
    Ambiente    = var.tag_ambiente
  }
}

resource "aws_subnet" "public_subnet_2" {
  vpc_id            = aws_vpc.terraform_vpc.id
  cidr_block        = var.public_subnet_cidrs[1]
  availability_zone = var.availability_zones[1]

  map_public_ip_on_launch = true

  tags = {
    Name        = "public-subnet-2-terraform"
    Environment = var.tag_environment
    Ambiente    = var.tag_ambiente
  }
}

# Subnets Privadas
resource "aws_subnet" "private_subnet_1" {
  vpc_id            = aws_vpc.terraform_vpc.id
  cidr_block        = var.private_subnet_cidrs[0]
  availability_zone = var.availability_zones[0]

  tags = {
    Name        = "private-subnet-1-terraform"
    Environment = var.tag_environment
    Ambiente    = var.tag_ambiente
  }
}

resource "aws_subnet" "private_subnet_2" {
  vpc_id            = aws_vpc.terraform_vpc.id
  cidr_block        = var.private_subnet_cidrs[1]
  availability_zone = var.availability_zones[1]

  tags = {
    Name        = "private-subnet-2-terraform"
    Environment = var.tag_environment
    Ambiente    = var.tag_ambiente
  }
}

# Tabela de rotas para Subnets Públicas
resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.terraform_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.terraform_igw.id
  }

  tags = {
    Name        = "public-route-table"
    Environment = var.tag_environment
    Ambiente    = var.tag_ambiente
  }
}

# Associações das Subnets Públicas à tabela de rotas pública
resource "aws_route_table_association" "public_subnet_1_association" {
  subnet_id      = aws_subnet.public_subnet_1.id
  route_table_id = aws_route_table.public_route_table.id
}

resource "aws_route_table_association" "public_subnet_2_association" {
  subnet_id      = aws_subnet.public_subnet_2.id
  route_table_id = aws_route_table.public_route_table.id
}

# Criar NAT Gateways
resource "aws_eip" "nat_eip_1" {
  domain = "vpc"
}

resource "aws_eip" "nat_eip_2" {
  domain = "vpc"
}


resource "aws_nat_gateway" "nat_gateway_1" {
  allocation_id = aws_eip.nat_eip_1.id
  subnet_id     = aws_subnet.public_subnet_1.id

  tags = {
    Name        = "nat-gateway-1"
    Environment = var.tag_environment
    Ambiente    = var.tag_ambiente
  }
}

resource "aws_nat_gateway" "nat_gateway_2" {
  allocation_id = aws_eip.nat_eip_2.id
  subnet_id     = aws_subnet.public_subnet_2.id

  tags = {
    Name        = "nat-gateway-2"
    Environment = var.tag_environment
    Ambiente    = var.tag_ambiente
  }
}

# Tabelas de rotas para Subnets Privadas
resource "aws_route_table" "private_route_table_1" {
  vpc_id = aws_vpc.terraform_vpc.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat_gateway_1.id
  }

  tags = {
    Name        = "private-route-table-1"
    Environment = var.tag_environment
    Ambiente    = var.tag_ambiente
  }
}

resource "aws_route_table" "private_route_table_2" {
  vpc_id = aws_vpc.terraform_vpc.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat_gateway_2.id
  }

  tags = {
    Name        = "private-route-table-2"
    Environment = var.tag_environment
    Ambiente    = var.tag_ambiente
  }
}

# Associações das Subnets Privadas às suas tabelas de rotas
resource "aws_route_table_association" "private_subnet_1_association" {
  subnet_id      = aws_subnet.private_subnet_1.id
  route_table_id = aws_route_table.private_route_table_1.id
}

resource "aws_route_table_association" "private_subnet_2_association" {
  subnet_id      = aws_subnet.private_subnet_2.id
  route_table_id = aws_route_table.private_route_table_2.id
}
